fixed alignment

--- a/views/main.scss
+++ b/views/main.scss
@@ -140,6 +140,7 @@ div.n-columns {
     display: table-cell;
     padding: 0px 20px;
     vertical-align: top;
+    width: 300px;
     img.resize {
       width: 150px;
       height: auto;
